webhooks/validation webhook/app_with_label_8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    osconf: hyderabad
  name: d1
spec:
  selector:
    matchLabels:
      app: web
      osconf: k8s
  template:
    metadata:
      labels:
        app: web
        osconf: hyderabad 
    spec:
      containers:
      - name: c1
        image: arunvel1988/c1
        ports:
        - name: tcp
          containerPort: 8000
