webhooks/validation webhook/app_wo_label_7.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: c1
        image: arunvel1988/c1 
        ports:
        - name: tcp
          containerPort: 8000
