webhooks/validation webhook/validating_admission_webhook_6.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
  namespace: default
webhooks:
  - name: arunv.default.svc
    failurePolicy: Fail
    clientConfig:
      service:
        name: arunv
        namespace: default
        path: "/validate/deployments"
 #       path: /validate/deployments
      caBundle:  LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZDekNDQXZPZ0F3SUJBZ0lKQU1Hc1drMVRxTHZNTUEwR0NTcUdTSWIzRFFFQkN3VUFNQnd4R2pBWUJnTlYKQkFNTUVXRnlkVzUyTG1SbFptRjFiSFF1YzNaak1CNFhEVEl3TURjek1URXhNVEl5TTFvWERUSXhNRGN5TWpFeApNVEl5TTFvd0hERWFNQmdHQTFVRUF3d1JZWEoxYm5ZdVpHVm1ZWFZzZEM1emRtTXdnZ0lpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQ0R3QXdnZ0lLQW9JQ0FRQzRoVkxkamY1TkRGNGt0alI1cVdzbFoxR0U0YTVUa0NPc1hGWVgKOUsrc3RKSlBmR0hIUDljVWtURzlVTUQvK3ljYW9mUUlGci9iS2MwZG0yL0xUQWRjV21tK1B3cXUvbEZwYjZrOQpQc3VIdUp5STl [...]
    rules:
      - apiGroups: ["apps"]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
